Fixed a zero-use-case layout bug (in landscape mode)

--- a/fxos/style.css
+++ b/fxos/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
 * {
-	-moz-box-sizing:	border-box;
-	box-sizing:			border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 body {
 	padding: 1rem;
@@ -34,4 +34,9 @@ button:active { background: linear-gradient(#182, #3A4); }
 	font-family: sans-serif;
 	font-weight: bold;
 	text-shadow: 0 1px 0 #fff;
+}
+
+@media all and (orientation: landscape) {
+	img { margin: 10vh auto 5vh; }
+	button { bottom: 1.25rem; }
 }
